--- a/test-output/index.html
+++ b/test-output/index.html
@@ -143,6 +143,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Portofoliu_Project&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.pageObjects.Atest&quot;/&gt;
     &lt;/classes&gt;
@@ -188,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'method')
 data.setCell(0, 2, 'com.pageObjects.Atest')
-data.setCell(0, 3, 16);
+data.setCell(0, 3, 8);
 window.suiteTableData['Portofoliu_Project']= { tableData: data, tableDiv: 'times-div-Portofoliu_Project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 ms</span>
+              <span class="suite-total-time">Total running time: 8 ms</span>
               <div id="times-div-Portofoliu_Project">
               </div> <!-- times-div-Portofoliu_Project -->
             </div> <!-- times-div -->
@@ -220,9 +221,13 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.pageObjects.Atest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup(chrome)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">method</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">7801 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
