--- a/test-output/old/Portofoliu_Project/methods.html
+++ b/test-output/old/Portofoliu_Project/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Portofoliu_Project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3ccb2">  <td>21/04/21 09:36:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Atest.method()[pri:0, instance:com.pageObjects.Atest@2f465398]">method</td> 
-  <td>main@773989906</td>   <td></td> </tr>
+<tr bgcolor="fea1ea">  <td>21/04/21 10:07:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.pageObjects.Atest@1018bde2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797814020</td>   <td></td> </tr>
+<tr bgcolor="9175ef">  <td>21/04/21 10:07:30</td>   <td>7788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Atest.method()[pri:0, instance:com.pageObjects.Atest@1018bde2]">method</td> 
+  <td>main@797814020</td>   <td></td> </tr>
 </table>
