--- a/test-output/index.html
+++ b/test-output/index.html
@@ -142,6 +142,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Portofoliu_Project&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.Utilities.Reporting&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
@@ -189,12 +192,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'method')
 data.setCell(0, 2, 'com.pageObjects.Atest')
-data.setCell(0, 3, 8);
+data.setCell(0, 3, 12);
 window.suiteTableData['Portofoliu_Project']= { tableData: data, tableDiv: 'times-div-Portofoliu_Project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 ms</span>
+              <span class="suite-total-time">Total running time: 12 ms</span>
               <div id="times-div-Portofoliu_Project">
               </div> <!-- times-div-Portofoliu_Project -->
             </div> <!-- times-div -->
@@ -227,7 +230,7 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">method</span>
-                <span class="method-start">7801 ms</span>
+                <span class="method-start">8639 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
