--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 5 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Portofoliu_Project" class="navigator-link">
-              <span class="suite-name border-passed">Portofoliu_Project</span>
+              <span class="suite-name border-failed">Portofoliu_Project</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,41 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods, 5 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Portofoliu_Project" class="hide-methods passed suite-Portofoliu_Project"> (hide)</a> <!-- hide-methods passed suite-Portofoliu_Project -->
-                      <a href="#" panel-name="suite-Portofoliu_Project" class="show-methods passed suite-Portofoliu_Project"> (show)</a> <!-- show-methods passed suite-Portofoliu_Project -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Portofoliu_Project" class="hide-methods failed suite-Portofoliu_Project"> (hide)</a> <!-- hide-methods failed suite-Portofoliu_Project -->
+                      <a href="#" panel-name="suite-Portofoliu_Project" class="show-methods failed suite-Portofoliu_Project"> (show)</a> <!-- show-methods failed suite-Portofoliu_Project -->
                     </span>
-                    <div class="method-list-content passed suite-Portofoliu_Project">
+                    <div class="method-list-content failed suite-Portofoliu_Project">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.pageObjects.Atest" class="method navigator-link" hash-for-method="method">method</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.testCases.Test_class" class="method navigator-link" hash-for-method="loginDDT(mngr164225, jahetAp)">loginDDT(mngr164225, jahetAp)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Portofoliu_Project -->
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.testCases.Test_class" class="method navigator-link" hash-for-method="loginDDT(null, null)">loginDDT(null, null)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.testCases.Test_class" class="method navigator-link" hash-for-method="loginDDT(mngr137319, bAdYvyb)">loginDDT(mngr137319, bAdYvyb)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.testCases.Test_class" class="method navigator-link" hash-for-method="loginDDT(mngr164225, jahetAp)">loginDDT(mngr164225, jahetAp)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Portofoliu_Project" title="com.testCases.Test_class" class="method navigator-link" hash-for-method="loginDDT(mngr83460, qAbUzyj)">loginDDT(mngr83460, qAbUzyj)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Portofoliu_Project -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,21 +137,74 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Portofoliu_Project" class="panel Portofoliu_Project">
-          <div class="suite-Portofoliu_Project-class-passed">
+          <div class="suite-Portofoliu_Project-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.pageObjects.Atest</span>
+              <img src="failed.png"/>
+              <span class="class-name">com.testCases.Test_class</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="method">
-                  </a> <!-- method -->
-                  <span class="method-name">method</span>
+                  <a name="loginDDT(mngr164225, jahetAp)">
+                  </a> <!-- loginDDT(mngr164225, jahetAp) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(mngr164225, jahetAp)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.testCases.Test_class.loginDDT(Test_class.java:39)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginDDT(null, null)">
+                  </a> <!-- loginDDT(null, null) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(null, null)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.testCases.Test_class.loginDDT(Test_class.java:39)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginDDT(mngr137319, bAdYvyb)">
+                  </a> <!-- loginDDT(mngr137319, bAdYvyb) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(mngr137319, bAdYvyb)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.testCases.Test_class.loginDDT(Test_class.java:39)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginDDT(mngr164225, jahetAp)">
+                  </a> <!-- loginDDT(mngr164225, jahetAp) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(mngr164225, jahetAp)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.testCases.Test_class.loginDDT(Test_class.java:39)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginDDT(mngr83460, qAbUzyj)">
+                  </a> <!-- loginDDT(mngr83460, qAbUzyj) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(mngr83460, qAbUzyj)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.testCases.Test_class.loginDDT(Test_class.java:39)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Portofoliu_Project-class-passed -->
+          </div> <!-- suite-Portofoliu_Project-class-failed -->
         </div> <!-- panel Portofoliu_Project -->
         <div panel-name="test-xml-Portofoliu_Project" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -148,7 +221,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pageObjects.Atest&quot;/&gt;
+      &lt;class name=&quot;com.testCases.Test_class&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Portofoliu_Project --&gt;
@@ -188,16 +261,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'method')
-data.setCell(0, 2, 'com.pageObjects.Atest')
-data.setCell(0, 3, 12);
+data.setCell(0, 1, 'loginDDT')
+data.setCell(0, 2, 'com.testCases.Test_class')
+data.setCell(0, 3, 4828);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'loginDDT')
+data.setCell(1, 2, 'com.testCases.Test_class')
+data.setCell(1, 3, 4629);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'loginDDT')
+data.setCell(2, 2, 'com.testCases.Test_class')
+data.setCell(2, 3, 4628);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'loginDDT')
+data.setCell(3, 2, 'com.testCases.Test_class')
+data.setCell(3, 3, 4578);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'loginDDT')
+data.setCell(4, 2, 'com.testCases.Test_class')
+data.setCell(4, 3, 4346);
 window.suiteTableData['Portofoliu_Project']= { tableData: data, tableDiv: 'times-div-Portofoliu_Project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 ms</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Portofoliu_Project">
               </div> <!-- times-div-Portofoliu_Project -->
             </div> <!-- times-div -->
@@ -223,14 +312,40 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.pageObjects.Atest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.testCases.Test_class</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">method</span>
-                <span class="method-start">8639 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">loginDDT(mngr164225, jahetAp)</span>
+                <span class="method-start">4979 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">loginDDT(mngr83460, qAbUzyj)</span>
+                <span class="method-start">9826 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">loginDDT(mngr137319, bAdYvyb)</span>
+                <span class="method-start">14458 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">loginDDT(mngr164225, jahetAp)</span>
+                <span class="method-start">19037 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">loginDDT(null, null)</span>
+                <span class="method-start">23668 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
