--- a/test-output/old/Portofoliu_Project/classes.html
+++ b/test-output/old/Portofoliu_Project/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.pageObjects.Atest</td>
+<td>com.testCases.Test_class</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>method</td>
+<td>loginDDT</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
