--- a/test-output/old/Portofoliu_Project/methods-alphabetical.html
+++ b/test-output/old/Portofoliu_Project/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Portofoliu_Project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9795b6">  <td>21/04/21 21:25:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Atest.method()[pri:0, instance:com.pageObjects.Atest@7c1e2a9e]">method</td> 
-  <td>main@159475521</td>   <td></td> </tr>
-<tr bgcolor="8b6791">  <td>21/04/21 21:25:30</td>   <td>-8627</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.pageObjects.Atest@7c1e2a9e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@159475521</td>   <td></td> </tr>
+<tr bgcolor="9795b6">  <td>21/04/23 11:20:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_class.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">loginDDT</td> 
+  <td>main@795321555</td>   <td></td> </tr>
+<tr bgcolor="9795b6">  <td>21/04/23 11:20:41</td>   <td>4847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_class.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">loginDDT</td> 
+  <td>main@795321555</td>   <td></td> </tr>
+<tr bgcolor="9795b6">  <td>21/04/23 11:20:46</td>   <td>9479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_class.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">loginDDT</td> 
+  <td>main@795321555</td>   <td></td> </tr>
+<tr bgcolor="9795b6">  <td>21/04/23 11:20:50</td>   <td>14058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_class.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">loginDDT</td> 
+  <td>main@795321555</td>   <td></td> </tr>
+<tr bgcolor="9795b6">  <td>21/04/23 11:20:55</td>   <td>18689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_class.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">loginDDT</td> 
+  <td>main@795321555</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>21/04/23 11:20:31</td>   <td>-4968</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.testCases.Test_class@fd07cbb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795321555</td>   <td></td> </tr>
 </table>
